Add legacy beacon domain object and gateways